--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,26 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@import url('https://fonts.googleapis.com/css2?family=Sora:wght@200;400;500&display=swap');
+
+* {
+  font-family: 'Sora', sans-serif;
+}
+
+#header {
+  text-align-last: center;
+  background: #ffffff;
+  margin: 2rem;
+}
+
+#main {
+  background: #f8fafc;
+  height: 100vh;
+  width: 100%;
+}
+
+.title {
+  font-weight: 600;
+  font-stretch: ultra-expanded;
+}
